--- a/articolo.html
+++ b/articolo.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <small>Scienze</small> <small style="color:orange">Fase 2 Coronavirus</small><br>
-        <p style="text-align: center;"><img src="Maschera.jpeg" width="100%" height="400" alt="Donna con mascherina"></p>
+        <p style="text-align: center;"><img src="Maschera.jpeg" width="500" height="350" alt="Donna con mascherina"></p>
         <a href="#pillola">Vai alla Pillola Informativa</a>
         <h1>Come scoprire un sorriso dietro la mascherina</h1>
         <small><strong>09 GIUGNO 2020</strong></small>
@@ -60,7 +60,7 @@
         quando si è al telefono piuttosto che quando si parla faccia a faccia.<br>
         </p>
         <hr>
-        <p style="text-align: center;"><img src="Doctor.jpg" width="100%" height="300" alt="Donne con mascherina"></p>
+        <p style="text-align: center;"><img src="Doctor.jpg" width="650" height="300" alt="Donne con mascherina"></p>
         <hr>
         <p>
         Uno studio condotto nel 1972 da Albert Mehrabian (Non-verbal 
@@ -77,19 +77,24 @@
         comunicazione non verbale.
         </p>
         <p><a href="https://it.wikipedia.org/wiki/Comunicazione_non_verbale" target="_blank">Leggi il resto</a></p>
+        <p>o</p>
+        <p><a href="file:///Users/mirianacaliendi/Desktop/LEZIONI%20FRONT%20END/APPUNTI/HTML/ESERCITAZIONI/HOME/Articolo/Articolo%202/Articolo%202.html" target="_blank">Vai al nostro prossimo articolo</a></p>
         <hr>
-        <h5>Tabella informativa</h5>
         <table style="width: 100%; border: solid;">
-            <tr>
+            <caption>Autore</caption>
+            <colgroup>
+            <col span="4" style="background-color: cadetblue;">
+            </colgroup>
+            <tr style="text-align: center;">
                 <th style="border: solid 1px black">Nome</th>
-                <th style="border: solid 1px black">Cognome</th>
-                <th style="border: solid 1px black">Età</th>
+                <th style="border: solid 1px black">Articolo</th>
+                <th style="border: solid 1px black">Testata Giornalistica</th>
                 <th style="border: solid 1px black">Città</th>
             </tr>
-            <tr>
+            <tr style="text-align: center;">
                 <td style="border: solid 1px black">Miriana</td>
-                <td style="border: solid 1px black">Caliendi</td>
-                <td style="border: solid 1px black">22</td>
+                <td style="border: solid 1px black">n°3</td>
+                <td style="border: solid 1px black">MCorporate</td>
                 <td style="border: solid 1px black">Bologna</td>
             </tr>
         </table>
